# the-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Design Notes.md  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  linux-build.yml  windows-build.yml
demo/: CMakeLists.txt  demo_app.cpp  demo_app.h  main.cpp
demo/asset/font/bangers/: bangers_sdf_metrics.json
demo/asset/font/inter/: Inter_sdf_metrics.json
demo/include/: demo_app.h
demo/src/: demo_app.cpp  main.cpp
engine-assets/shaders/: forward_frag.glsl  forward_vert.glsl
include/: NOTES.md  camera.h  components.h  ecs_hierarchy_traverser.h  i_application.h  image_loader.h  platform.h  transformation_system.h
include/animation/: animation_data_structures.h  animation_system.h  keyframe_animation_interpolator.h  keyframe_animation_manager.h  skeletal_animation_manager.h  skeletal_animation_solver.h
include/animation-system/: animation_system.h
include/asset-system/: animation_resource_system.h  asset_system.h  light_system.h  material_system.h  mesh_system.h  texture_system.h
include/audio-system/: audio_system.h
include/engine/: engine.h  engine_core.h  engine_core_data_types.h  engine_loader.h
include/light-system/: light_system.h
include/low-level/: gpu_buffer_manager.h  gpu_buffer_per_frame_allocator.h  gpu_buffer_sub_bump_allocator.h  gpu_buffer_transfer_manager.h  gpu_material_system.h  gpu_sampler_manager.h  gpu_texture_manager.h  rendering_system_data_types.h  shader_code.h  shader_code_generator.h  shader_manager.h  vertex_format_helper.h  vertex_format_manager.h  world_vertex_buffer_management_system.h
include/material-system/: material_system.h
include/memory-management/: gpu_buffer_circular_allocator.h  (+9 more)
src/: camera.cpp  common_header_imp.cpp  ecs_hierarchy_traverser.cpp  image_loader.cpp  platform.cpp  transformation_system.cpp
tests/: CMakeLists.txt
tests/compile/: CMakeLists.txt  compile_test.cpp
tests/integration/: CMakeLists.txt
tests/integration/ecs/: ecs_engine_test.cpp
tests/unit/: CMakeLists.txt  sanity_check.cpp
tests/unit/ecs/: archetype_manager_test.cpp  ecs_manager_test.cpp  entity_manager_test.cpp  query_system_test.cpp
tests/unit/graphics/: gpu_resource_manager_test.cpp  gpu_resource_system_test.cpp
tests/unit/resource/: cpu_resource_manager_test.cpp
the-engine/: CMakeLists.txt
the-engine/ecs/: CMakeLists.txt  Important_notes.md  README.md
the-engine/ecs/include/: archetype_manager.h  bump_allocator.h  chunk_pool_allocator.h  command_buffer.h  command_processor.h  common_data_types.h  component_registry  component_registry.h  ecs_engine.h  ecs_manager.h  ecs_registry.h  entity.h  entity_manager.h  i_component_registry.h  icomponent_store.h  iterator.h  map_component_store.h  query_system.h
the-engine/ecs/include/components/: components.h  material_component.h  mesh_component.h  render_component.h  transform_component.h
the-engine/ecs/include/query-system/: chunk_array_view.h  entity_chunk_view.h  query.h  query_system.h
the-engine/ecs/src/: archetype_manager.cpp  bump_allocator.cpp  command_buffer.cpp  command_processor.cpp  component_registry.cpp  component_store.cpp  ecs_engine.cpp  ecs_manager.cpp  ecs_registry.cpp  entity.cpp  entity_manager.cpp  iterator.cpp  map_component_store.cpp  query_system.cpp
the-engine/ecs/src/query-system/: chunk_array_view.cpp  entity_chunk_view.cpp  query.cpp  query_system.cpp
the-engine/graphics/: CMakeLists.txt  INFO.md  RENDERING_SYSTEM_DESIGN.md  Research_Notes.md
the-engine/graphics/include/: Approach.md  buffer_manager.h  common_data_types.h  descriptor_set_manager.h  gpu_asset_orchestrator.h  gpu_dynamic_buffer_allocator.h  gpu_mesh.h  gpu_resource_manager.h  gpu_resource_streamer.h  igpu_buffer.h  igpu_command_buffer.h  igpu_descriptor_set.h  igpu_descriptor_set_layout.h  igpu_dynamic_buffer_allocator.h  igpu_framebuffer.h  igpu_material.h  igpu_pipeline_layout.h  igpu_pipeline_state.h  igpu_render_device.h  igpu_render_pass.h  igpu_render_system.h  igpu_resource.h  igpu_sampler.h  igpu_shader_module.h  igpu_texture.h  igpu_texture_view.h  image_manager.h  queue_manager.h  render_graph.h  render_system.h  shader_manager.h  swap_chain_manager.h
the-engine/graphics/include/backends/opengl/: opengl_buffer.h  opengl_command_buffer.h  opengl_descriptor_set.h  opengl_descriptor_set_layout.h  opengl_framebuffer.h  opengl_pipeline_layout.h  opengl_pipeline_state.h  opengl_render_device.h  opengl_render_pass.h  opengl_sampler.h  opengl_shader_module.h  opengl_texture.h  opengl_texture_view.h  opengl_utils.h
the-engine/graphics/include/converter/: icpu_to_gpu_converter.h
the-engine/graphics/include/core/: common_enums.h  engine_shader_bindings.h  vertex_input_layout.h
the-engine/graphics/include/gpu_resource_system/: gpu_resource_manager.h  gpu_resource_streamer.h  gpu_resource_system.h  igpu_resource_manager.h  igpu_resource_streamer.h  igpu_resource_system.h
the-engine/graphics/include/gpu_resource_system/converter/: cpu_gpu_resource_convertor.h  gpu_resource_factory.h  icpu_to_gpu_converter.h  igpu_resource_factory.h  mesh_cpu_to_gpu_converter.h
the-engine/graphics/src/: gpu_asset_orchestrator.cpp  gpu_dynamic_buffer_allocator.cpp  gpu_mesh.cpp  gpu_resource_manager.cpp  gpu_resource_streamer.cpp  pipeline_manager.cpp  render_system.cpp  swap_chain_manager.cpp  vulkan_device.cpp
the-engine/graphics/src/backends/opengl/: opengl_buffer.cpp  opengl_command_buffer.cpp  opengl_descriptor_set.cpp  opengl_descriptor_set_layout.cpp  opengl_framebuffer.cpp  opengl_pipeline_layout.cpp  opengl_pipeline_state.cpp  opengl_render_device.cpp  opengl_render_pass.cpp  opengl_sampler.cpp  opengl_shader_module.cpp  opengl_texture.cpp  opengl_texture_view.cpp  opengl_utils.cpp
the-engine/graphics/src/converter/: cpu_gpu_resource_convertor.cpp  mesh_cpu_to_gpu_converter.cpp
the-engine/graphics/src/gpu_resource_system/: gpu_resource_manager.cpp  gpu_resource_system.cpp
the-engine/graphics/src/gpu_resource_system/converter/: gpu_resource_factory.cpp  mesh_cpu_to_gpu_converter.cpp
(+466 files in other folders)
